kubernetes/datasette/datasette.yml
# datasette.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: datasette
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datasette
  namespace: datasette
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datasette
  template:
    metadata:
      labels:
        app: datasette
    spec:
      containers:
      - name: datasette
        image: datasetteproject/datasette
        command:
        - sh
        - -c
        args:
        - |-
          # Install some plugins
          pip install \
            datasette-debug-asgi \
            datasette-cluster-map \
            datasette-psutil
          # Download a DB (using Python because curl/wget are not available)
          python -c 'import urllib.request; urllib.request.urlretrieve("https://global-power-plants.datasettes.com/global-power-plants.db", "/home/global-power-plants.db")'
          # Start Datasette, on 0.0.0.0 to allow external traffic
          datasette -h 0.0.0.0 /home/global-power-plants.db
        ports:
        - containerPort: 8001
          protocol: TCP
      dnsPolicy: Default # TODO(Malik): difference between dnsPolicy: Default and ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: datasette
  namespace: datasette
spec:
  ports:
  - name: https
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: datasette
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: datasette-letsencrypt-prod
  name: datasette
  namespace: datasette
spec:
  ingressClassName: nginx
  rules:
  - host: datasette.mksybr.com
    http:
      paths:
      - backend:
          service:
            name: datasette
            port:
              number: 8001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - datasette.mksybr.com
    secretName: datasette-letsencrypt-prod
